cart add and order

--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,9 @@
         }
     },
     "autoload-dev": {
+        "files": [
+            "app/Helpers/Helpers.php"
+        ],
         "psr-4": {
             "Tests\\": "tests/"
         }
