--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "intervention/image": "^2.5",
         "laravel/framework": "^8.40",
         "laravel/sanctum": "^2.11",
+        "laravel/socialite": "^5.2",
         "laravel/tinker": "^2.5",
         "realrashid/sweet-alert": "^3.2",
         "yajra/laravel-datatables-oracle": "~9.0"
