--- a/.env.example
+++ b/.env.example
@@ -54,14 +54,14 @@ SWEET_ALERT_MIDDLEWARE_TOAST_CLOSE_BUTTON=true
 SWEET_ALERT_MIDDLEWARE_ALERT_CLOSE_TIME=5000
 SWEET_ALERT_AUTO_DISPLAY_ERROR_MESSAGES=true
 
-GOOGLE_CLIENT_ID="104773023849-5q1gesj22evqugauj6ofhj1t6dhjget9.apps.googleusercontent.com"
-GOOGLE_CLIENT_SECRET="104773023849-5q1gesj22evqugauj6ofhj1t6dhjget9.apps.googleusercontent.com"
-GOOGLE_CALL_BACK="https://interview-task.com/login/google/callback"
+GOOGLE_CLIENT_ID=""
+GOOGLE_CLIENT_SECRET=""
+GOOGLE_CALL_BACK="http://interview-task.com/login/callback/google"
 
 FACEBOOK_CLIENT_ID=""
 FACEBOOK_CLIENT_SECRET=""
-FACEBOOK_CALL_BACK="https://interview-task.com/login/facebook/callback"
+FACEBOOK_CALL_BACK="http://interview-task.com/login/callback/facebook"
 
-GITHUB_CLIENT_ID="8022e33078e6312c9a64"
-GITHUB_CLIENT_SECRET="7be0fa9ffefe7302319f269d0ef783a81f8b8994 "
-GITHUB_CALL_BACK="https://interview-task.com/login/github/callback"
+GITHUB_CLIENT_ID=""
+GITHUB_CLIENT_SECRET=""
+GITHUB_CALL_BACK="http://interview-task.com/login/callback/github"
